--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "^3.10.0",
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
+    "cookies-next": "^5.1.0",
     "date-fns": "^4.1.0",
     "graphql": "^16.10.0",
     "lucide-react": "^0.474.0",
