--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-phone-number-input": "^3.4.11",
     "react-toastify": "^11.0.3",
     "tailwind-merge": "^3.0.1",
     "zod": "^3.24.1"
